<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.musicminiapp.MainActivity">

    <TextView
        android:id="@+id/artist"
        style="@style/CategoryStyle"
        android:background="@color/category_artist"
        android:text="@string/artist" />

    <TextView
        android:id="@+id/album"
        style="@style/CategoryStyle"
        android:background="@color/category_album"
        android:text="@string/album" />

    <TextView
        android:id="@+id/genre"
        style="@style/CategoryStyle"
        android:background="@color/category_genre"
        android:text="@string/genre" />

    <TextView
        android:id="@+id/payment_method"
        style="@style/CategoryStyle"
        android:background="@color/category_payment"
        android:text="@string/payment_method" />
</LinearLayout>