<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.musicminiapp.PaymentActivity">

    <Button
        android:id="@+id/home"
        style="@style/CategoryStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/category_home"
        android:gravity="center"
        android:text="@string/home"
        android:textSize="25sp"></Button>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/artist"
            style="@style/CategoryStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:background="@color/category_artist"
            android:text="@string/artist" />

        <Button
            android:id="@+id/album"
            style="@style/CategoryStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:background="@color/category_album"
            android:text="@string/album" />

        <Button
            android:id="@+id/genre"
            style="@style/CategoryStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:background="@color/category_genre"
            android:text="@string/genre" />

        <Button
            android:id="@+id/payment_method"
            style="@style/CategoryStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.25"
            android:background="@color/category_payment"
            android:text="Payment" />
    </LinearLayout>

    <TextView
        style="@style/CategoryStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/payment_method_info" />
</LinearLayout>
