<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.musicminiapp.AlbumActivity"
    android:orientation="vertical"
    android:background="#000000">
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/home"
        style="@style/CategoryStyle"
        android:background="@color/category_home"
        android:text="@string/home"
        android:gravity="center"
        android:textSize="25sp"></Button>
    <LinearLayout  android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:background="#000000">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/artist"
            style="@style/CategoryStyle"
            android:background="@color/category_artist"
            android:text="@string/artist"
            android:layout_weight="0.25"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/album"
            style="@style/CategoryStyle"
            android:background="@color/category_album"
            android:text="@string/album"
            android:layout_weight="0.25"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/genre"
            style="@style/CategoryStyle"
            android:background="@color/category_genre"
            android:text="@string/genre"
            android:layout_weight="0.25"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/payment_method"
            style="@style/CategoryStyle"
            android:background="@color/category_payment"
            android:text="Payment"
            android:layout_weight="0.25"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/album_info"
        style="@style/CategoryStyle"/>
</LinearLayout>
